--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -28,10 +28,10 @@ jobs:
     steps:
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install git -y
-      - name: Set up Go 1.17
+      - name: Set up Go 1.18b7
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: 1.18b7
         id: go
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
@@ -43,10 +43,10 @@ jobs:
             ${{ runner.os }}-go-
       - name: Build Linux and Darwin
         if: matrix.os != 'windows'
-        run: GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -o sops-${{ matrix.os }}-${{ matrix.arch }}-${{ github.sha }} -v ./cmd/sops
+        run: GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -o sops-fips-${{ matrix.os }}-${{ matrix.arch }}-${{ github.sha }} -v ./cmd/sops
       - name: Build Windows
         if: matrix.os == 'windows'
-        run: GOOS=${{ matrix.os }} go build -o sops-${{ matrix.os }}-${{ github.sha }} -v ./cmd/sops
+        run: GOOS=${{ matrix.os }} go build -o sops-fips-${{ matrix.os }}-${{ github.sha }} -v ./cmd/sops
       - name: Import test GPG keys
         run: for i in 1 2 3 4 5; do gpg --import pgp/sops_functional_tests_key.asc && break || sleep 15; done
       - name: Test
@@ -55,14 +55,14 @@ jobs:
         if: matrix.os != 'windows'
         uses: actions/upload-artifact@v2
         with:
-          name: sops-${{ matrix.os }}-${{ matrix.arch }}-${{ github.sha }}
-          path: sops-${{ matrix.os }}-${{ matrix.arch }}-${{ github.sha }}
+          name: sops-fips-${{ matrix.os }}-${{ matrix.arch }}-${{ github.sha }}
+          path: sops-fips-${{ matrix.os }}-${{ matrix.arch }}-${{ github.sha }}
       - name: Upload artifact for Windows
         if: matrix.os == 'windows'
         uses: actions/upload-artifact@v2
         with:
-          name: sops-${{ matrix.os }}-${{ github.sha }}
-          path: sops-${{ matrix.os }}-${{ github.sha }}
+          name: sops-fips-${{ matrix.os }}-${{ github.sha }}
+          path: sops-fips-${{ matrix.os }}-${{ github.sha }}
   test:
     name: Functional tests
     runs-on: ubuntu-latest
@@ -78,9 +78,9 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
-          name: sops-linux-amd64-${{ github.sha }}
+          name: sops-fips-linux-amd64-${{ github.sha }}
       - name: Move SOPS binary
-        run: mv sops-linux-amd64-${{ github.sha }} ./functional-tests/sops
+        run: mv sops-fips-linux-amd64-${{ github.sha }} ./functional-tests/sops
       - name: Make SOPS binary executable
         run: chmod +x ./functional-tests/sops
       - name: Download Vault
