Only build l64 bit Linux

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -16,8 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [linux, darwin, windows]
-        arch: [amd64, arm64]
+        # os: [linux, darwin, windows]
+        # arch: [amd64, arm64]        
+        os: [linux]
+        arch: [amd64]
         exclude:
           - os: windows
             arch: arm64
