--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Set up Go 1.18b7
         uses: actions/setup-go@v2
         with:
+          stable: 'false'
           go-version: 1.18b7
         id: go
       - name: Check out code into the Go module directory
