--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -31,10 +31,7 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install git -y
       - name: Set up Go 1.18b7
-        uses: actions/setup-go@v2
-        with:
-          stable: 'false'
-          go-version: 1.18b7
+        run: ./bin/ci/setup-boring-go.sh
         id: go
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
